cmake_minimum_required(VERSION 3.10)
project(olxclient)
set(CMAKE_THREAD_LIBS_INIT "-lpthread")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread ")
add_subdirectory(client)
include_directories("include")
include_directories("client/include")
add_executable(${PROJECT_NAME} main.c)
target_link_libraries(${PROJECT_NAME} client)